# NailScan

./: LICENSE  README.md  config.json  environment.yml  install.sh  nailscan.batch.sh  nailscan.single.sh  pyproject.toml
docs/: BENCHMARKING.md  FILTERING.md  INTERPRO_DATABASES.md  NAIL_PATCH.md
nailscan/: __init__.py  __main__.py  cli.py
patches/: nail-binarize.patch
scripts/: add_ipr_go.py  benchmark.py  build_signature2interpro.py  download_interpro_mappings.sh  filter_length1_hmms.py  make_pfam_map.sh
test/: test1.fa  test2.fa  test3.fa
