[project]
name = "nailscan"
version = "0.1.0"
description = "Fast HMM-profile search (nail) for InterPro-style annotation; uv/conda + bash + Click, no pip publish."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["click>=8.0"]

[project.scripts]
nailscan = "nailscan.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nailscan"]
